Fixed chart blurriness issue #28

--- a/app/static/css/stats.css
+++ b/app/static/css/stats.css
@@ -110,7 +110,8 @@ body {
 }
 
 .gear-preference {
-    width: auto;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -120,7 +121,7 @@ body {
 
 .gear-chart-container {
     max-width: 150px;
-    display: flex;
+    display: flex; 
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -128,8 +129,8 @@ body {
 }
 
 .gear-chart {
-    height: 100px !important;
     width: 130px !important;
+    height: auto !important;
 }
 
 #aperture-distribution {
